--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                 </div>
                 <ul>
                     <li class="white-bullet">
-                        <!-- <input id="switch" type="checkbox" />
-                            <label for="switch">fdgdfgf</label> -->
+                        <!-- <input id="change" type="checkbox" />
+                            <label for="change">fdgdfgf</label> -->
                     </li>
                     <li class="gray-bullet"></li>
                     <li class="gray-bullet"></li>
@@ -151,7 +151,10 @@
                             <div class="products">
                                 <div class="heart">
                                     <p></p>
-                                    <img src="./asstes/images/heart.svg" alt="" />
+                                    <input id="red-heart1" type="checkbox" />
+                                    <label for="red-heart1">
+                                        <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
+                                    </label>
                                 </div>
                                 <picture>
                                     <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
@@ -178,7 +181,10 @@
                             <div class="products">
                                 <div class="heart">
                                     <p></p>
-                                    <img src="./asstes/images/heart.svg" alt="" />
+                                    <input id="red-heart2" type="checkbox" />
+                                    <label for="red-heart2">
+                                        <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
+                                    </label>
                                 </div>
                                 <picture>
                                     <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
@@ -204,7 +210,10 @@
                             <div class="products">
                                 <div class="heart">
                                     <p></p>
-                                    <img src="./asstes/images/heart.svg" alt="" />
+                                    <input id="red-heart3" type="checkbox" />
+                                    <label for="red-heart3">
+                                        <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
+                                    </label>
                                 </div>
                                 <picture>
                                     <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
@@ -230,7 +239,10 @@
                             <div class="products">
                                 <div class="heart color">
                                     <p>-30%</p>
-                                    <img src="./asstes/images/heart.svg" alt="" />
+                                    <input id="red-heart4" type="checkbox" />
+                                    <label for="red-heart4">
+                                        <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
+                                    </label>
                                 </div>
                                 <picture>
                                     <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
