--- a/index.html
+++ b/index.html
@@ -51,14 +51,27 @@
                     </div>
 
                 </div>
-                <ul>
+
+                <div>
+                    <input id="change1" type="radio" name="switch" checked />
+                <label for="change1" class="gray-bullet first"></label>
+
+                <input id="change2" type="radio" name="switch"/>
+                <label for="change2" class="gray-bullet second"></label>
+
+                <input id="change3" type="radio" name="switch"/>
+                <label for="change3" class="gray-bullet third"></label>
+                </div>
+
+
+                <!-- <ul>
                     <li class="white-bullet">
-                        <!-- <input id="change" type="checkbox" />
-                            <label for="change">fdgdfgf</label> -->
                     </li>
                     <li class="gray-bullet"></li>
                     <li class="gray-bullet"></li>
-                </ul>
+                </ul> -->
+
+
             </div>
         </div>
         <section>
@@ -157,11 +170,11 @@
                                     <input id="red-heart1" type="checkbox" />
                                     <label for="red-heart1">
                                         <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
-                                        <!-- <svg width="24" height="23" viewBox="0 0 24 23" fill="none"
+                                        <!-- <svg width="24" height="23" viewBox="0 0 24 23" 
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
                                                 d="M17.5 0.93042C16.3739 0.947935 15.2724 1.26227 14.3068 1.84169C13.3411 2.42111 12.5453 3.24509 12 4.23042C11.4546 3.24509 10.6589 2.42111 9.69323 1.84169C8.72753 1.26227 7.62604 0.947935 6.49999 0.93042C4.70493 1.00841 3.01369 1.79367 1.79577 3.11465C0.577848 4.43563 -0.0677617 6.18495 -1.11917e-05 7.98042C-1.11917e-05 12.5274 4.78599 17.4934 8.79999 20.8604C9.69621 21.6136 10.8293 22.0264 12 22.0264C13.1706 22.0264 14.3038 21.6136 15.2 20.8604C19.214 17.4934 24 12.5274 24 7.98042C24.0677 6.18495 23.4221 4.43563 22.2042 3.11465C20.9863 1.79367 19.295 1.00841 17.5 0.93042ZM13.915 19.3304C13.379 19.7818 12.7007 20.0293 12 20.0293C11.2992 20.0293 10.621 19.7818 10.085 19.3304C4.94699 15.0194 1.99999 10.8834 1.99999 7.98042C1.93163 6.71514 2.36635 5.47415 3.20935 4.52812C4.05235 3.58209 5.23522 3.00777 6.49999 2.93042C7.76476 3.00777 8.94763 3.58209 9.79063 4.52812C10.6336 5.47415 11.0683 6.71514 11 7.98042C11 8.24564 11.1053 8.49999 11.2929 8.68753C11.4804 8.87506 11.7348 8.98042 12 8.98042C12.2652 8.98042 12.5196 8.87506 12.7071 8.68753C12.8946 8.49999 13 8.24564 13 7.98042C12.9316 6.71514 13.3664 5.47415 14.2094 4.52812C15.0523 3.58209 16.2352 3.00777 17.5 2.93042C18.7648 3.00777 19.9476 3.58209 20.7906 4.52812C21.6336 5.47415 22.0683 6.71514 22 7.98042C22 10.8834 19.053 15.0194 13.915 19.3264V19.3304Z"
-                                                fill="#181818" />
+                                                fill="currentColor" />
                                         </svg> -->
                                     </label>
                                 </div>
@@ -277,140 +290,139 @@
                 </ul>
 
                 <input id="other-product" type="checkbox" />
-                <!-- <label for="other-product" class="foo"> -->
-                    <div class="other-products desktop">
-                        <ul class="product">
+                <div class="other-products desktop">
+                    <ul class="product">
 
 
-                            <li class="col">
-                                <div class="item">
-                                    <div class="products">
-                                        <div class="heart">
-                                            <p></p>
-                                            <input id="red-heart1" type="checkbox" />
-                                            <label for="red-heart1">
-                                                <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
-                                            </label>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
-                                            <img src="./asstes/images/bag.png" alt="bag" />
-                                        </picture>
+                        <li class="col">
+                            <div class="item">
+                                <div class="products">
+                                    <div class="heart">
+                                        <p></p>
+                                        <input id="red-heart1" type="checkbox" />
+                                        <label for="red-heart1">
+                                            <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
+                                        </label>
                                     </div>
-                                    <div class="name-price">
-                                        <div>
-                                            <p class="name">Fjallraven Backpack</p>
-                                            <p class="price">$109.95</p>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)"
-                                                srcset="./asstes/images/shopping-cart-m.svg" />
-                                            <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
-                                        </picture>
-                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)" srcset="./asstes/images/bag-m.png" />
+                                        <img src="./asstes/images/bag.png" alt="bag" />
+                                    </picture>
                                 </div>
-                            </li>
-
-
-
-                            <li class="col">
-                                <div class="item">
-                                    <div class="products">
-                                        <div class="heart">
-                                            <p></p>
-                                            <input id="red-heart2" type="checkbox" />
-                                            <label for="red-heart2">
-                                                <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
-                                            </label>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
-                                            <img src="./asstes/images/jacket.png" alt="jacket" />
-                                        </picture>
+                                <div class="name-price">
+                                    <div>
+                                        <p class="name">Fjallraven Backpack</p>
+                                        <p class="price">$109.95</p>
                                     </div>
-                                    <div class="name-price">
-                                        <div>
-                                            <p class="name">Mens Cotton Jacket</p>
-                                            <p class="price">$55.99</p>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)"
-                                                srcset="./asstes/images/shopping-cart-m.svg" />
-                                            <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
-                                        </picture>
-                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)"
+                                            srcset="./asstes/images/shopping-cart-m.svg" />
+                                        <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
+                                    </picture>
                                 </div>
-                            </li>
+                            </div>
+                        </li>
 
 
-                            <li class="col">
-                                <div class="item">
-                                    <div class="products">
-                                        <div class="heart">
-                                            <p></p>
-                                            <input id="red-heart3" type="checkbox" />
-                                            <label for="red-heart3">
-                                                <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
-                                            </label>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
-                                            <img src="./asstes/images/tshirt.png" alt="tshirt" />
-                                        </picture>
+
+                        <li class="col">
+                            <div class="item">
+                                <div class="products">
+                                    <div class="heart">
+                                        <p></p>
+                                        <input id="red-heart2" type="checkbox" />
+                                        <label for="red-heart2">
+                                            <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
+                                        </label>
                                     </div>
-                                    <div class="name-price">
-                                        <div>
-                                            <p class="name">Slim Fit T-Shirts</p>
-                                            <p class="price">$22.3</p>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)"
-                                                srcset="./asstes/images/shopping-cart-m.svg" />
-                                            <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
-                                        </picture>
-                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)" srcset="./asstes/images/jacket.png" />
+                                        <img src="./asstes/images/jacket.png" alt="jacket" />
+                                    </picture>
                                 </div>
-                            </li>
-
-
-                            <li class="col">
-                                <div class="item">
-                                    <div class="products">
-                                        <div class="heart color">
-                                            <p>-30%</p>
-                                            <input id="red-heart4" type="checkbox" />
-                                            <label for="red-heart4">
-                                                <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
-                                            </label>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
-                                            <img src="./asstes/images/sweater.png" alt="sweater" />
-                                        </picture>
+                                <div class="name-price">
+                                    <div>
+                                        <p class="name">Mens Cotton Jacket</p>
+                                        <p class="price">$55.99</p>
                                     </div>
-                                    <div class="name-price">
-                                        <div>
-                                            <p class="name">Mens Casual Slim Fit</p>
-                                            <!-- <p class="price line-through">$15.99<span>$11.25</span></p> -->
-                                            <p class="price">
-                                                <span class="old-price">$15.99</span>
-                                                <span class="new-price">$11.25</span>
-                                            </p>
-                                        </div>
-                                        <picture>
-                                            <source media="(min-width: 700px)"
-                                                srcset="./asstes/images/shopping-cart-m.svg" />
-                                            <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
-                                        </picture>
-                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)"
+                                            srcset="./asstes/images/shopping-cart-m.svg" />
+                                        <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
+                                    </picture>
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </li>
+
+
+                        <li class="col">
+                            <div class="item">
+                                <div class="products">
+                                    <div class="heart">
+                                        <p></p>
+                                        <input id="red-heart3" type="checkbox" />
+                                        <label for="red-heart3">
+                                            <img class="red-heart" src="./asstes/images/heart.svg" alt="" />
+                                        </label>
+                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)" srcset="./asstes/images/tshirt.png" />
+                                        <img src="./asstes/images/tshirt.png" alt="tshirt" />
+                                    </picture>
+                                </div>
+                                <div class="name-price">
+                                    <div>
+                                        <p class="name">Slim Fit T-Shirts</p>
+                                        <p class="price">$22.3</p>
+                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)"
+                                            srcset="./asstes/images/shopping-cart-m.svg" />
+                                        <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
+                                    </picture>
+                                </div>
+                            </div>
+                        </li>
+
+
+                        <li class="col">
+                            <div class="item">
+                                <div class="products">
+                                    <div class="heart color">
+                                        <p>-30%</p>
+                                        <input id="red-heart4" type="checkbox" />
+                                        <label for="red-heart4">
+                                            <img class="red-heart" src="./asstes/images/heart.svg" alt="heart" />
+                                        </label>
+                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)" srcset="./asstes/images/sweater.png" />
+                                        <img src="./asstes/images/sweater.png" alt="sweater" />
+                                    </picture>
+                                </div>
+                                <div class="name-price">
+                                    <div>
+                                        <p class="name">Mens Casual Slim Fit</p>
+                                        <!-- <p class="price line-through">$15.99<span>$11.25</span></p> -->
+                                        <p class="price">
+                                            <span class="old-price">$15.99</span>
+                                            <span class="new-price">$11.25</span>
+                                        </p>
+                                    </div>
+                                    <picture>
+                                        <source media="(min-width: 700px)"
+                                            srcset="./asstes/images/shopping-cart-m.svg" />
+                                        <img src="./asstes/images/shopping-cart.svg" alt="shopping cart" />
+                                    </picture>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                     <!-- </label> -->
-                    </div>
+                </div>
             </div>
 
-            <label for="other-product" class="btn-wrapper b-btn desktop">Load more products
+            <label for="other-product" class="show-more desktop">Load more products
                 <!-- <a href="#" title="Load more products">Load more products</a>< -->
             </label>
         </div>
